--- a/pages/lineUpDetail/lineUpDetail.wxss
+++ b/pages/lineUpDetail/lineUpDetail.wxss
@@ -119,6 +119,14 @@ image {
   text-align: right;
 }
 
+.perfect .text{
+  font-size: 28rpx;
+  line-height: 40rpx;
+  color: #fff;
+  text-align: center;
+  margin-top: 20rpx;
+}
+
 .queue .order_btn button{
   width: 560rpx;
   height: 80rpx;
@@ -128,4 +136,70 @@ image {
   border-radius: 56rpx;
   background-color: #fff;
   margin-top: 64rpx;
+}
+
+.perfect .order_btn button{
+  margin-top: 20rpx;
+}
+
+.mask{
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 2;
+  background-color: rgba(0, 0, 0, 0.6);
+  opacity: 1;
+}
+
+.popup{
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  width: 550rpx;
+  height: 300rpx;
+  padding-top: 10rpx;
+  transform: translate(-50%, -50%);
+  background-color: #fff;
+  border-radius: 20rpx;
+  z-index: 3;
+  box-sizing: border-box;
+}
+
+.popup .input_row{
+  width: 420rpx;
+  margin: 20rpx auto;
+}
+
+.popup .input_row input{
+  width: 420rpx;
+  height: 80rpx;
+  font-size: 28rpx;
+  line-height: 78rpx;
+  border: 1rpx solid #F5F5F5;
+  border-radius: 40rpx;
+  padding-left: 20rpx;
+  box-sizing: border-box;
+}
+
+.popup .tips{
+  width: 420rpx;
+  font-size: 28rpx;
+  line-height: 42rpx;
+  padding-left: 20rpx;
+  box-sizing: border-box;
+  margin: 0 auto 20rpx;
+  color: #999;
+}
+
+.popup button{
+  width: 300rpx;
+  height: 80rpx;
+  line-height: 80rpx;
+  font-size: 32rpx;
+  color: #fff;
+  border: 0;
+  background-color: #23C2F7;
+  border-radius: 40rpx;
 }
