修复套餐放题多规格不需要展示价格的问题

--- a/pages/foodItems/foodItems.wxss
+++ b/pages/foodItems/foodItems.wxss
@@ -290,6 +290,7 @@ page{
 }
 
 .popup .specifications .food_info .info .price{
+  display: none;
   font-size: 32rpx;
   line-height: 45rpx;
   color: #F97572;
